<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Farsi alphabet </string>
    <string name="title_activity_letter_canvas">LetterCanvasActivity</string>
    <string name="letter_canvas_hint">SLidl over the letter to draw it</string>
    <string name="canvas_toast_message">Slide your finger over the letter to practice in drawing it.</string>
    <string name="welcome_toast_message">Click on the red letters to hear their pronunciations. Click on the blue letters to practive drawing.</string>
    <string name="action_about">About</string>
    <string name="action_clear">Clear</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_title">About Farsi alphabet</string>
    <string name="about_letter">Where we write the letter like below?</string>
    <string name="action_listen">Listen</string>
    <string name="action_info">info</string>
    <string name="action_write">Write</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_numbers">Numbers</string>
    <string name="please_rate_use_title">Please rate us!</string>
    <string name="please_rate_use_text">Do you like Learn Farsi Alphabet? Rate us on Google Play to help improving this app!</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="letter_begin" formatted="false"> Use " %s " in the beginning of the word, \n for example: " %s " (%s).</string>
    <string name="letter_middle" formatted="false"> Use " %s " in the middle of the word, \n for example: " %s " (%s).</string>
    <string name="letter_end" formatted="false"> Use " %s " in the end of the word, \n for example: " %s " (%s).</string>
    <string name="standalone_end_letters"> Letters cannot attach, ز , ر , د , ذ , و , ا , immeditely after. </string>
    <string name="right_to_left"> Practice your farsi writting, from right to left.</string>
    <string name="title_activity_word_canvas">Practice with words</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_letter_practice">Practice writing</string>
    <string name="isolated">isolated</string>
    <string name="begin">begin</string>
    <string name="middle">middle</string>
    <string name="end">end</string>
    <string name="title_activity_number_practice">Practive with numbers</string>

</resources>