<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LetterCanvasActivity" >

    

    <com.ahuralab.farsialphabet.CanvasTextView
        android:id="@+id/letterCanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:hint="@string/letter_canvas_hint"
        android:text="ش"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000"
        android:textSize="@dimen/letter_canvas_size" />

    <ImageButton
        android:id="@+id/buttonResetCanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/letterCanvas"
        android:layout_alignTop="@+id/letterCanvas"
        android:src="@drawable/ic_action_refresh" />

    <TextView
        android:id="@+id/letterInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/letterCanvas"
        android:layout_marginRight="25dp"
        android:layout_toLeftOf="@+id/buttonResetCanvas"
        android:ems="10"
        android:text="@string/about_letter"
        android:textColor="#01C5BB"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/standaloneInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/letterCanvas"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/letterCanvas"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:text="@string/standalone_end_letters"
        android:textColor="#01C5BB"
        android:textSize="24dp"
        android:textStyle="italic" />

</RelativeLayout>